hphp/hack/test/typecheck/union/mixed.php.legacy.exp
File "mixed.php", line 17, characters 3-13:
  (_ | exact A)
File "mixed.php", line 25, characters 3-13:
  nonnull
File "mixed.php", line 34, characters 3-13:
  mixed
File "mixed.php", line 43, characters 3-13:
  (exact A | exact Object)
File "mixed.php", line 54, characters 3-13:
  (function(string $s1, string $s2): (int | string))
File "mixed.php", line 63, characters 3-13:
  ([fun] | [fun])
File "mixed.php", line 72, characters 3-13:
  A
File "mixed.php", line 76, characters 3-13:
  (int | string)
File "mixed.php", line 79, characters 3-13:
  num
File "mixed.php", line 82, characters 3-13:
  (float | string)
File "mixed.php", line 85, characters 3-13:
  B
File "mixed.php", line 88, characters 3-13:
  (int | B)
File "mixed.php", line 91, characters 3-13:
  (B | exact A)
File "mixed.php", line 27, characters 12-13:
Invalid argument (Typing[4110])
  File "mixed.php", line 102, characters 19-19:
  This is an object of type A
  File "mixed.php", line 11, characters 48-54:
  It is incompatible with a nonnull value
File "mixed.php", line 36, characters 12-13:
Invalid argument (Typing[4110])
  File "mixed.php", line 102, characters 19-19:
  This is an object of type A
  File "mixed.php", line 11, characters 34-38:
  It is incompatible with a mixed value
File "mixed.php", line 44, characters 17-18:
Invalid argument (Typing[4110])
  File "mixed.php", line 101, characters 24-29:
  This is an object of type Object
  File "mixed.php", line 41, characters 14-14:
  It is incompatible with an object of exactly the class A
File "mixed.php", line 45, characters 12-13:
Invalid argument (Typing[4110])
  File "mixed.php", line 102, characters 19-19:
  This is an object of type A
  File "mixed.php", line 39, characters 14-19:
  It is incompatible with an object of exactly the class Object
File "mixed.php", line 56, characters 18-19:
Invalid argument (Typing[4110])
  File "mixed.php", line 96, characters 52-54:
  This is an int
  File "mixed.php", line 52, characters 36-41:
  It is incompatible with a string
File "mixed.php", line 65, characters 28-29:
Invalid argument (Typing[4039])
  File "mixed.php", line 94, characters 35-60:
  Number of arguments doesn't match
  File "mixed.php", line 59, characters 10-31:
  Because of this definition
